<resources>
    <string name="app_name">StifDev_TAP</string>
    <string name="play">PLAY</string>

    <string name="title_activity_scenario_select">scenario_select</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="roomTextString">lorem ipsum absurdum roomium bingo dinosaur potential nokey what thing happen horn muppet nintendo random words hard to think</string>
    <string name="roomTitle">The Ballroom</string>
    <string name="btnTopString">North</string>
    <string name="btnBottomString">South</string>
    <string name="btnLeftString">West</string>
    <string name="btnRightString">East</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="inventory">Inventory</string>

    <!--Extra long strings! -->
    <string name="about_text">"A few years ago I undertook a degree in Software Engineering with the Open Univeristy as a way to expand my job prospects and fulfil a childhood dream of being able to code (#nerd). Since first studying Java back in 2012 I've been saying I'd like to build myself an Android application, but didn't really have a clue what to build.

	In 2015 a good friend built project-arklay.com as a little side project and I really enjoyed helping him out with some testing. Then in June 2016 whilst on holiday with my family I spent a bit of time in the evenings working through an Android development course on Udemy and had the idea of trying to implement an Android version of Arklay as a little project - you hold the result of this little experiment in your hands!

	stifDev_TAP was created for fun and practice - I've learnt so much building it, and whilst its a relatively simple app, I'm geniunely happy with how it's turned out.

	I hope you enjoy playing it as much as I've enjoyed making it - if you do like the app, please consider rating it on the Google Play store.


	The project code is freely available on github (you can also file bug reports there if you like!):
	https://github.com/Stif-UK/StifDev_TAP

        "</string>
    <string name="acknowledgements_thanks_text">"I would be remiss if I didn't extend my heartfelt thanks to dnimmo, not just for allowing me to plagiarise the  project arklay (v1) story wholesale, but also for being the l33test br0 a man could ask for - love you man.
- http://project-arklay.com
- http://dnimmo.co.uk

The vast majority of the code in stifDev tap has been written from scratch, however credit where it's due both the official Android Developers web pages and the indispensable Stack Overflow have both been fantastic resources when I've been stuck (heck, most days I was amazed my laptop didn't grind to a halt with so many Chrome tabs open...)
- http://developer.android.com
- http://stackoverflow.com

Although this is a text adventure, there are a few icons dotted about it so another huge thank you has to go out to Font Awesome by Dave Gandy
- http://fontawesome.io

A shout out to my friend and colleague Colin McCormick for both his encouragement and for not telling me to get on with what I was supposed to be doing when I'd show him my meager progress in the office of a morning...I'll update this with a link when his own secret project is released!

Unlimited high fives to the guys and gals at Megabytes cafe in Glasgow (the worlds best retro video game cafe!) for keeping me fed and cafinated all those hours I spent working on this app during my lunch break.
- https://twitter.com/mb_glasgow

Finally, the biggest acknowledgement of all - to my beautiful wife Joanne and wonderful son Caleb - thanks for putting up with all of the late nights and times when I rushed to my notebook to scribble some notes of things I wanted to work on later. I love you both so much and couldn't wish for a better family x"</string></resources>
